<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:context=".MainActivity">

        <com.example.mycaculator.my_control.MyTextView
            android:id="@+id/myTextView"
            android:layout_width="406dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.119"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_01"
            android:textAlignment="viewEnd"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/myTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/grid_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myTextView"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/buttonAC"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/AC"
                app:layout_column="0"
                app:layout_row="3" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/_3"
                app:layout_column="2"
                app:layout_row="2" />

            <Button
                android:id="@+id/button_sub"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/sub"
                app:layout_column="3"
                app:layout_row="2" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/Dot"
                app:layout_column="2"
                app:layout_row="3" />

            <Button
                android:id="@+id/button_equal"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/eqo"
                app:layout_column="0"
                app:layout_row="4" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/plus"
                android:textColor="#FFFFFF"
                app:layout_column="3"
                app:layout_row="3" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/_000"
                app:layout_column="1"
                app:layout_row="3" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/_1"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/_2"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/button_div"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/div"
                app:layout_column="3"
                app:layout_row="1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/_6"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/_5"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/_4"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/_7"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/_8"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/_9" />

            <Button
                android:id="@+id/button_time"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/time"
                app:layout_column="3"
                app:layout_row="0" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="89dp"
                android:layout_height="65dp"
                android:backgroundTint="#FFFFFF"
                app:layout_column="3"
                app:layout_row="4"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        </androidx.gridlayout.widget.GridLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
    